llvm/test/tools/llubi/byval_lifetime.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define ptr @identity(ptr byval(i32) %p) {
  ret ptr %p
}

define void @main() {
  %var = alloca i32
  %p = call ptr @identity(ptr byval(i32) %var)
  store i32 0, ptr %p

  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %var = alloca i32, align 4 => ptr 0x8 [var]
; CHECK-NEXT: Entering function: identity
; CHECK-NEXT:   ptr %p = ptr 0x10 [p]
; CHECK-NEXT:   ret ptr %p
; CHECK-NEXT: Exiting function: identity
; CHECK-NEXT:   %p = call ptr @identity(ptr byval(i32) %var) => ptr 0x10 [p]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   store i32 0, ptr %p, align 4 at @main <stdin>:11
; CHECK-NEXT: Immediate UB detected: Try to access a dead memory object at address 0x10.
; CHECK-NEXT: error: Execution of function 'main' failed.
